# music-recommender

./: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  song_metadata.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  database.py  main.py
app/core/: __init__.py  mmr.py  position_bias.py  thompson_sampling.py
app/models/: __init__.py  audio_output.py  interaction.py  item_statistics.py  song.py
app/routers/: __init__.py  feedback.py  search.py
app/schemas/: __init__.py  feedback.py  search.py
app/services/: __init__.py  cache.py  diversity.py  embedding.py  feedback.py  neural_reranker.py  ranking.py  retrieval.py  statistics.py
app/utils/: __init__.py  dynamo_parser.py
results/: benchmark_results.json  diversity_proof.json
scripts/: benchmark.py  ingest.py  test_diversity.py  test_ranking.py
