[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musicgpt-ranking"
version = "0.1.0"
description = "Self-optimizing music search ranking engine"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",
    
    # Redis
    "redis>=5.0.0",
    
    # OpenAI Embeddings
    "openai>=1.12.0",
    
    # Reranking (local, no API key needed)
    "FlashRank>=0.2.0",
    
    # ML utilities
    "numpy>=1.26.0",
    "tiktoken>=0.5.0",
    
    # Utilities
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "orjson>=3.9.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
